--- a/.github/workflows/push_aws_ecr.yml
+++ b/.github/workflows/push_aws_ecr.yml
@@ -10,6 +10,9 @@ jobs:
   push_docker_image:
     runs-on: ubuntu-latest
     steps:
+      - name: "Checkout code"
+        uses: actions/checkout@master
+
       - run: docker build --tag ifsc-calendar-backend:latest .
       - name: Push to ECR
         id: ecr
