--- a/.github/workflows/push_aws_ecr.yml
+++ b/.github/workflows/push_aws_ecr.yml
@@ -14,11 +14,25 @@ jobs:
         uses: actions/checkout@master
 
       - run: docker build --tag ifsc-calendar-backend:latest .
-      - name: Push to ECR
-        id: ecr
-        uses: jwalton/gh-ecr-push@v1
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
         with:
-          access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          region: eu-central-1
-          image: ifsc-calendar-backend
+            role-to-assume: ${{ secrets.AWS_ECR_ROLE }}
+            aws-region: eu-central-1
+
+      - name: Login to Amazon ECR Public
+        id: login-ecr-public
+        uses: aws-actions/amazon-ecr-login@v2
+        with:
+          registry-type: public
+
+      - name: Build, tag, and push docker image to Amazon ECR Public
+        env:
+          REGISTRY: ${{ steps.login-ecr-public.outputs.registry }}
+          REGISTRY_ALIAS: c3y5r9x4
+          REPOSITORY: ifsc-calendar-backend
+          IMAGE_TAG: latest
+        run: |
+          docker build -t $REGISTRY/$REGISTRY_ALIAS/$REPOSITORY:$IMAGE_TAG .
+          docker push $REGISTRY/$REGISTRY_ALIAS/$REPOSITORY:$IMAGE_TAG
