--- a/.github/workflows/push_aws_ecr.yml
+++ b/.github/workflows/push_aws_ecr.yml
@@ -20,6 +20,8 @@ jobs:
         with:
             role-to-assume: ${{ secrets.AWS_ECR_ROLE }}
             aws-region: eu-central-1
+            aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+            aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
       - name: Login to Amazon ECR Public
         id: login-ecr-public
